[package]
name = "perg"
version = "0.1.0"
authors = ["Federico Guerinoni <guerinoni.federico@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jwalk = "0.5"
clap = "3.0.0-beta.2"

[dev-dependencies]
pretty_assertions = "0.7.2"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3